--- a/style.css
+++ b/style.css
@@ -73,8 +73,9 @@ button{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 0.3rem;
+    gap: 0.5rem;
     border: 0.2rem solid lightgray;
+    padding: 0rem 1rem 0rem 1rem;
     border-radius: 1rem;
 }
 h3{
@@ -95,3 +96,4 @@ h3{
     
     float: left;
 }
+
